--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9",
+    "axios": "^0.21.1",
+    "localforage": "^1.9.0",
+    "postcss": "^8.2.8",
+    "postcss-import": "12.0.1",
     "register-service-worker": "^1.7.1",
+    "secure-ls": "^1.2.6",
+    "tailwindcss": "^2.0.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-cli": "^2.9.6",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.4.0",
+    "vuex-class": "^0.3.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
+    "@types/vuelidate": "^0.7.14",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
