--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^9",
     "axios": "^0.21.1",
+    "graphql-upload": "^11.0.0",
     "localforage": "^1.9.0",
     "postcss": "^8.2.8",
     "postcss-import": "12.0.1",
