added readme and changed the docker to react

--- a/Docker_Container/dockerfile
+++ b/Docker_Container/dockerfile
@@ -1,5 +1,5 @@
-# base image
-FROM node:12.2.0-alpine
+# pull official base image
+FROM node:13.12.0-alpine
 
 # set working directory
 WORKDIR /app
@@ -7,10 +7,14 @@ WORKDIR /app
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
-# install and cache app dependencies
-COPY package.json /app/package.json
-RUN npm install
-RUN npm install @vue/cli@3.7.0 -g
+# install app dependencies
+COPY package.json ./
+COPY package-lock.json ./
+RUN npm install --silent
+RUN npm install react-scripts@3.4.1 -g --silent
+
+# add app
+COPY . ./
 
 # start app
-CMD ["npm", "run", "serve"]
+CMD ["npm", "start"]
