--- a/Docker_Container/docker-compose.yml
+++ b/Docker_Container/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.7'
 
 services:
 
-  my-app:
-    container_name: my-app
+  sample:
+    container_name: sample
     build:
       context: .
       dockerfile: Dockerfile
@@ -11,4 +11,6 @@ services:
       - '.:/app'
       - '/app/node_modules'
     ports:
-      - '8081:8080'
+      - 3001:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
