--- a/Docker_Container/dockerfile
+++ b/Docker_Container/dockerfile
@@ -9,6 +9,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY package.json ./
+COPY yarn.json ./
 COPY package-lock.json ./
 RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
