--- a/Docker_Container/dockerfile
+++ b/Docker_Container/dockerfile
@@ -9,13 +9,13 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY package.json ./
-COPY yarn.json ./
+COPY yarn.lock ./
 COPY package-lock.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN yarn install --silent
+RUN yarn install react-scripts@3.4.1 -g --silent
 
 # add app
 COPY . ./
 
 # start app
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
