--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "serve": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:e2e": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --fix && echo 'Lint complete.'"
   },
