--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,8 +1,9 @@
-name: PR workflow
-on: pull_request
+name: PR Lint
+on: [pull_request]
 jobs:
-  build:
+  pr_lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: stefanoeb/eslint-action@1.0.2
+    - uses: vijaykramesh/pr-lint-action@v1.0
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
