--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "eslint": "^7.26.0",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
