--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -3,6 +3,8 @@ on:
   issues:
       types: ['opened']
 jobs:
+  
+  # Adding Unapproved Label on creation on new issue
   Opened-issue-label:
     name: Adding Issue Label
     runs-on: ubuntu-latest
@@ -13,6 +15,7 @@ jobs:
           ignore-comments: true
           default-labels: '["unapproved"]'
   
+  # Greeting message on first issue registration
   Issue-Greeting:
     name: Greeting Message to User
     runs-on: ubuntu-latest
@@ -20,4 +23,4 @@ jobs:
       - uses: actions/first-interaction@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: "Congratulations on making your first Issue! :confetti_ball: If you haven't already, check out our [Contributing Guidelines](https://github.com/PalisadoesFoundation/talawa/blob/master/CONTRIBUTING.md) and [Issue Reporting Guidelines](https://github.com/PalisadoesFoundation/talawa/blob/master/issue-guidelines.md) to ensure that you are following our guidelines for contributing and making issues."
+          issue-message: "Congratulations on making your first Issue! :confetti_ball: If you haven't already, check out our [Contributing Guidelines](https://github.com/PalisadoesFoundation/talawa-admin/blob/master/CONTRIBUTING.md) to ensure that you are following our guidelines for contributing and making issues."
