--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,27 +1,9 @@
-name: Lint
-
-on: pull_request
-
+name: PR Lint
+on: [pull_request]
 jobs:
-  run-linters:
-    name: Run linters
+  pr_lint:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: yarn install
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v1
-        with:
-          eslint: true
-          prettier: true
+    - uses: vijaykramesh/pr-lint-action@v1.0
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
