--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint 'src/*.{ts,tsx}'",
-    "lint-fix": "eslint 'src/*.{ts,tsx}' --fix",
+    "lint": "eslint 'src/*.{ts,tsx}' --no-error-on-unmatched-pattern",
+    "lint-fix": "eslint 'src/*.{ts,tsx}' --fix --no-error-on-unmatched-pattern",
     "format": "prettier --write \"**/*.{ts,tsx,json,scss,css}\""
   },
   "eslintConfig": {
