--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.15.6",
+    "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
     "@types/react": "^17.0.6",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
