--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,9 +1,10 @@
-name: Issue Auto label
+name: Issue Workflow
 on:
   issues:
       types: ['opened']
 jobs:
-  build:
+  Opened-issue-label:
+    name: Adding Issue Label
     runs-on: ubuntu-latest
     steps:
       - uses: Renato66/auto-label@v2.2.0
@@ -11,3 +12,13 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           ignore-comments: true
           default-labels: '["unapproved"]'
+  
+  Issue-Greeting:
+    name: Greeting Message to User
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: "Congratulations on making your first Issue! :confetti_ball: If you haven't already, check out our [Contributing Guidelines](https://github.com/PalisadoesFoundation/talawa-admin/blob/master/CONTRIBUTING.md) and [Issue Reporting Guidelines](https://github.com/PalisadoesFoundation/talawa-admin/blob/master/issue-guidelines.md) to ensure that you are following our guidelines for contributing and making issues."
+
