--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
     "react/destructuring-assignment": ["warn", "always"],
     "react/no-multi-comp": ["error", { "ignoreStateless": false }],
     "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
-
+    "prettier/prettier": ["error", {"endOfLine": "auto"}],
+    
     // Ensures that components are always written in PascalCase
     "react/jsx-pascal-case": [
       "error",
