--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.0.1"
   },
