--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/enzyme": "^3.10.8",
     "@types/react": "^17.0.6",
     "@types/react-router-dom": "^5.1.7",
