--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.20",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@apollo/client": "^3.3.21",
+    "@apollo/link-error": "^2.0.0-beta.3",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react-dom": "^17.0.0",
-    "chart.js": "^3.4.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.16",
+    "@types/react-dom": "^17.0.9",
+    "chart.js": "^3.4.1",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "graphql": "^15.5.1",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^1.6.1",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "typescript": "^4.2.4",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -56,11 +57,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@types/enzyme": "^3.10.8",
-    "@types/react": "^17.0.6",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@types/enzyme": "^3.10.9",
+    "@types/react": "^17.0.14",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
