--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jquery": "^3.5.6",
     "@types/node": "^12.20.16",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.12.1",
     "chart.js": "^3.4.1",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
@@ -22,6 +23,7 @@
     "react-bootstrap": "^1.6.1",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "typescript": "^4.3.5",
