--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/jest": "^26.0.24",
     "@types/jquery": "^3.5.6",
     "@types/node": "^12.20.16",
+    "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.12.1",
     "chart.js": "^3.4.1",
+    "bootstrap": "^4.2.1",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
