--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.12.1",
-    "chart.js": "^3.4.1",
+    "antd": "^4.16.9",
     "bootstrap": "^4.2.1",
+    "chart.js": "^3.4.1",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
