--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.24",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.20.16",
+    "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.12.1",
+    "antd": "^4.16.9",
+    "bootstrap": "^4.2.1",
     "chart.js": "^3.4.1",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
@@ -21,6 +26,7 @@
     "react-bootstrap": "^1.6.1",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "typescript": "^4.3.5",
@@ -62,6 +68,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jquery": "^3.2.1"
   }
 }
