--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jquery": "^3.5.6",
     "@types/node": "^12.20.16",
     "@types/react-bootstrap": "^0.32.26",
+    "@types/react-datepicker": "^4.1.4",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.12.1",
     "antd": "^4.16.9",
@@ -25,6 +26,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-chartjs-2": "^3.0.3",
+    "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
