--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
