--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# files that interfere with YARN
+.package-lock.json
+package-lock.json
+
 # dependencies
 /node_modules
 /.pnp
