--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.4",
     "react-chartjs-2": "^3.0.3",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
@@ -34,6 +34,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.3.5",
