--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,17 +24,9 @@
     "sourceType": "module"
   },
   // Specify the ESLint plugins tobe used
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "react-hooks",
-    "jest"
-  ],
+  "plugins": ["react", "@typescript-eslint", "react-hooks", "jest"],
   "rules": {
-    "react/destructuring-assignment": [
-      "warn",
-      "always"
-    ],
+    "react/destructuring-assignment": ["warn", "always"],
     "react/no-multi-comp": [
       "error",
       {
@@ -44,9 +36,7 @@
     "react/jsx-filename-extension": [
       "error",
       {
-        "extensions": [
-          ".tsx"
-        ]
+        "extensions": [".tsx"]
       }
     ],
     // Ensures that components are always written in PascalCase
@@ -58,16 +48,10 @@
       }
     ],
     // Enforces whitespace around equal sign operators
-    "react/jsx-equals-spacing": [
-      "warn",
-      "never"
-    ],
+    "react/jsx-equals-spacing": ["warn", "never"],
     "react/no-this-in-sfc": "error",
     // Ensures that components are always indented by 2 spaces
-    "react/jsx-indent": [
-      "warn",
-      2
-    ],
+    "react/jsx-indent": ["warn", 2],
     "react/jsx-tag-spacing": [
       "warn",
       {
