--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
