fixes codeQL warning
create new codeQL section

renamed with convention

fix invalid codeQL error

added missing jobs section

do away with dependencies

restore in pull-requests.yml and added push.yml for on push events

add on.push in pull-request.yml

--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -2,7 +2,10 @@ name: PR Workflow
 on:
   pull_request:
     branches:
-      - '**'
+      - '**'  
+  push:
+    branches:
+      - '**'      
 jobs:
   
   Linter:
@@ -48,4 +51,3 @@ jobs:
 
        - name: Perform CodeQL Analysis
          uses: github/codeql-action/analyze@v1
-       
