--- a/package.json
+++ b/package.json
@@ -45,11 +45,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint \"**/*.{ts,tsx}\" && pip install pylint-runner rich validators --user && pylint_runner --rcfile=.pylintrc -v",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint-fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,scss,css}\"",
-    "setup-windows": "pip install rich validators --user && python setup_file.py && venv\\Scripts\\activate && pip install -r requirements.txt && python virtual_setup.py",
-    "setup-others": "sudo apt install python3-pip && pip install rich validators --user && python setup_file.py && . venv/bin/activate && pip install -r requirements.txt && python virtual_setup.py"
+    "setup": "yarn install && node setup_file.js"
   },
   "eslintConfig": {
     "extends": [
@@ -78,8 +77,11 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "chalk": "4.1.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "prompt-sync": "^4.2.0",
+    "valid-url": "^1.0.9"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19"
