--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "chart.js": "^3.4.1",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-prettier": "^3.4.0",
     "graphql": "^15.5.1",
+    "jest": "^27.4.5",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
@@ -34,7 +36,7 @@
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.3.5",
