Updated job name for consistency with PRs

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - '**'   
 jobs:
-  code-scan:
+  CodeQL:
     name: Analyse code with codeQL on push
     runs-on: ubuntu-latest
     strategy:
