--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,6 +20,7 @@ jobs:
          uses: github/codeql-action/init@v1
          with:
           languages: ${{ matrix.language }}
+          debug: true
 
        - name: Autobuild
          uses: github/codeql-action/autobuild@v1
