--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -1,11 +1,17 @@
+##############################################################################
+##############################################################################
+#
+# Please read README.md in this directory on what to put in this file
+#
+##############################################################################
+##############################################################################
+
 name: PR Workflow
 on:
   pull_request:
     branches:
       - '**'  
-  push:
-    branches:
-      - '**'      
+
 jobs:
   
   Linter:
