--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -1,7 +1,10 @@
 ##############################################################################
 ##############################################################################
 #
-# Please read README.md in this directory on what to put in this file
+# NOTE!
+#
+# Please read the README.md file in this directory that defines what should 
+# be placed in this file
 #
 ##############################################################################
 ##############################################################################
