--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-boost": "^0.4.9",
     "bootstrap": "^4.2.1",
     "chart.js": "^3.4.1",
+    "detect-newline": "^4.0.0",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.3.4",
