--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,6 +28,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "graphql": "^15.5.1",
     "jest": "^27.4.5",
+    "jest-docblock": "^27.4.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
@@ -85,5 +87,16 @@
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.ts*"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 20,
+        "statements": 20
+      }
+    }
   }
 }
