--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -38,10 +38,28 @@ jobs:
       - name: Run tests
         run: yarn test
 
+  Code-Coverage:
+    runs-on: ubuntu-latest
+    needs: Continuous-Integration
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn install
+      - run: yarn test --watchAll=false --coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1   
+      - name: Report code coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+        with:
+          path: "./coverage/lcov.info"
+          min_coverage: 15       
+
   CodeQL:
     name: Analyse code with codeQL
     runs-on: ubuntu-latest
-    needs: Continuous-Integration
+    needs: Code-Coverage
     strategy:
       fail-fast: false
       matrix:
