--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,3 +38,16 @@ jobs:
 
        - name: Perform CodeQL Analysis
          uses: github/codeql-action/analyze@v1
+
+  Code-Coverage:
+    runs-on: ubuntu-latest
+    needs: CodeQL
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn install
+      - run: yarn test --watchAll=false --coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1   
