--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-boost": "^0.4.9",
     "bootstrap": "^4.2.1",
     "chart.js": "^3.4.1",
+    "dayjs": "^1.10.7",
     "detect-newline": "^4.0.0",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
