--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint-fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,json,scss,css}\""
+    "format": "prettier --write \"**/*.{ts,tsx,json,scss,css}\"",
+    "setup": "yarn install && node setup_file.js"
   },
   "eslintConfig": {
     "extends": [
@@ -80,10 +81,13 @@
     "@types/enzyme": "^3.10.9",
     "@types/react": "^17.0.14",
     "@types/react-router-dom": "^5.1.8",
+    "chalk": "4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "prompt-sync": "^4.2.0",
+    "valid-url": "^1.0.9"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19"
