🐛 FIX: src/state testing : deleted test file and ignored the base file(src/state/index.ts) as it contains only 1 line

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "lines": 20,
         "statements": 20
       }
-    }
+    },
+    "coveragePathIgnorePatterns": ["src/state/index.ts"]
   }
 }
