--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-bootstrap": "^0.32.26",
     "@types/react-datepicker": "^4.1.4",
     "@types/react-dom": "^17.0.9",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-modal": "^3.12.1",
     "antd": "^4.16.9",
     "apollo-boost": "^0.4.9",
@@ -46,10 +47,12 @@
     "react-chartjs-2": "^3.0.3",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.3.5",
