--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@
 
 REACT_APP_BACKEND_ENDPOINT=
 
+# Get the google recaptcha site key from google recaptcha admin or https://www.google.com/recaptcha/admin/create 
+# from here for reCAPTCHA v2 and "I'm not a robot" Checkbox, and paste the key here.
+# Note: In domains, fill localhost 
+
+REACT_APP_RECAPTCHA_KEY=
