--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@apollo/client": "^3.4.12",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-testing": "^4.0.0",
+    "@microsoft/api-extractor": "^7.25.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
