--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apollo/client": "^3.4.12",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-testing": "^4.0.0",
+    "@microsoft/api-documenter": "^7.17.19",
     "@microsoft/api-extractor": "^7.25.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.0",
