i18next configured and different languages added

--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-prettier": "^3.4.0",
+    "flag-icon-css": "^4.1.7",
     "graphql": "^15.5.1",
+    "i18next": "^21.8.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "inquirer": "^8.2.4",
     "jest": "^27.4.5",
     "jest-docblock": "^27.4.0",
+    "js-cookie": "^3.0.1",
     "markdown-js": "^0.0.4",
     "marked": "^4.0.10",
     "marked-terminal": "^4.1.0",
@@ -53,6 +58,7 @@
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-i18next": "^11.18.1",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
@@ -97,6 +103,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/enzyme": "^3.10.9",
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^17.0.14",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
