--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint-fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,scss,css}\"",
-    "setup": "npm i boxen@4.2.0 chalk@4.1.0 inquirer markdown-js marked@2.0.1 marked-terminal@4.1.0 node-cmd@5.0.0 -f && node setup_file.js"
+    "setup": "yarn add boxen@^4.2.0 chalk@^4.1.0 inquirer@^8.2.4 markdown-js@^0.0.4 marked@^4.0.10 marked-terminal@^4.1.0 node-cmd@^5.0.0 -f && node setup_file.js"
   },
   "eslintConfig": {
     "extends": [
