--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@
 
 # Run Talawa-api locally in your system, and put its url into the same.
 
-REACT_APP_BACKEND_ENDPOINT=
+REACT_APP_TALAWA_URL=
 
 # Get the google recaptcha site key from google recaptcha admin or https://www.google.com/recaptcha/admin/create 
 # from here for reCAPTCHA v2 and "I'm not a robot" Checkbox, and paste the key here.
 # Note: In domains, fill localhost 
 
-REACT_APP_RECAPTCHA_KEY=
+REACT_APP_RECAPTCHA_SITE_KEY=
