--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,4 +33,4 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           verbose: true
-          name: ${{env.CODECOV_UNIQUE_NAME}}
+          name: '${{env.CODECOV_UNIQUE_NAME}}'
