CODECOV_UNIQUE_NAME v3

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,3 +34,5 @@ jobs:
         with:
           verbose: true
           name: '${{env.CODECOV_UNIQUE_NAME}}'
+      - name: CodeCov Unique Name Test
+        run: echo '${{env.CODECOV_UNIQUE_NAME}}'
