--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
       - run: yarn test --watchAll=false --coverage
-      - name: Upload coverage to Codecov - '${{env.CODECOV_UNIQUE_NAME}}'
+      - name: Upload coverage to Codecov - `${{env.CODECOV_UNIQUE_NAME}}`
         uses: codecov/codecov-action@v3
         with:
           verbose: true
