--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,9 +29,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
       - run: yarn test --watchAll=false --coverage
-      - name: Echo CODECOV_UNIQUE_NAME value
-        run: echo ${{ env.resourceGroup2 }}
-      - name: Upload coverage to Codecov
+      - name: Upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
         uses: codecov/codecov-action@v3
         with:
           verbose: true
