--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -14,6 +14,12 @@ on:
   pull_request:
     paths:
       - '.github/**'     
+      - 'package.json'
+      - 'tsconfig.json'
+      - '.gitignore'
+      - '.eslintrc.json'
+      - '.eslintignore '
+      - 'CODEOWNERS'
       
 jobs:
   Checking-for-unauthorized-file-changes:
