--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -42,29 +42,29 @@ jobs:
       - name: Install Dependencies
         run: yarn
       - name: Check linting
-        run: yarn lint-check
+        run: yarn lint:check
       
-
+  Formatting:
+    name: Check formatting
+    runs-on: ubuntu-latest
+    needs: Linter
+    steps:
+    - uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: yarn
+      - name: Check formatting
+        run: yarn format:check
+  
   Continuous-Integration:
     name: Continuous integration on pull request
     runs-on: ubuntu-latest
-    needs: Linter
+    needs: Formatting
     steps:
       - uses: actions/checkout@v3
       - name: Install Dependencies
         run: yarn
       - name: Run tests
         run: yarn test
-  
-  Formatting:
-    name: Check formatting
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      - name: Install Dependencies
-        run: yarn
-      - name: Check formatting
-        run: yarn format-check
   
   Code-Coverage:
     name: Shows code coverage
