--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
       "src/state/index.ts",
       "src/components/plugins/index.ts",
       "src/components/AddOn/support/services/Render.helper.ts",
-      "src/components/SecuredRoute/SecuredRoute.tsx"
+      "src/components/SecuredRoute/SecuredRoute.tsx",
       "src/reportWebVitals.ts"
     ]
   }
