--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -52,10 +52,21 @@ jobs:
       - name: Check formatting
         run: yarn format:check
   
+  Type-Checker:
+    name: Check for type errors
+    runs-on: ubuntu-latest
+    needs: [Linter, Formatting]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: yarn
+      - name: Check formatting
+        run: yarn typecheck
+  
   Continuous-Integration:
     name: Continuous integration on pull request
     runs-on: ubuntu-latest
-    needs: [Linter, Formatting]
+    needs: [Linter, Formatting, Type-Checker]
     steps:
       - uses: actions/checkout@v3
       - name: Install Dependencies
