Add typechecking script to GitHub Workflow [Fixes #445] (#447)
* Change files

* Remove Type-Checker job

* Typo fix

* Move typechecking to linter

* Seperate job for typechecking

--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -30,7 +30,6 @@ jobs:
       - name: Run linting check
         run: yarn lint:check
 
-
   Count-lines-of-code:
     name: Total number of lines in every file should not be more than 400
     runs-on: ubuntu-latest
@@ -51,11 +50,22 @@ jobs:
         run: yarn
       - name: Check formatting
         run: yarn format:check
-  
+
+  Type-Checker:
+    name: Check for type errors
+    runs-on: ubuntu-latest
+    needs: [Linter, Formatting]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: yarn
+      - name: Check for type errors
+        run: yarn typecheck
+    
   Continuous-Integration:
     name: Continuous integration on pull request
     runs-on: ubuntu-latest
-    needs: [Linter, Formatting]
+    needs: [Linter, Formatting, Type-Checker]
     steps:
       - uses: actions/checkout@v3
       - name: Install Dependencies
