upgrade yarn to npm

--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -13,6 +13,7 @@ name: Checking workflow files
 on:
   pull_request:
     paths:
+      - '.github/**'   
       - 'env.example'
       - '.husky/**'
       - 'package.json'
