--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,8 +28,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install --legacy-peer-deps
-      - run: npm run test --watchAll=false --coverage
-      - run: q
+      - run: npm run test -- --watchAll=false --coverage
       - name: Present and upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
         uses: codecov/codecov-action@v3
         with:
