--- a/.github/workflows/pull-request-target.yml
+++ b/.github/workflows/pull-request-target.yml
@@ -9,7 +9,7 @@
 ##############################################################################
 ##############################################################################
 
-name: PR target workflow
+name: PR Target Workflow
 on: 
   pull_request_target:
   
