--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the Repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
