Adaptar for React 17 and CSS Modules Mock

--- a/package.json
+++ b/package.json
@@ -100,9 +100,11 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "cross-env": "^7.0.3",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest-enzyme": "^7.1.2",
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
